--- a/firstexercise/styles.css
+++ b/firstexercise/styles.css
@@ -68,13 +68,13 @@ h1
 .sec1{
  font-family: sans-serif;
 	height: 150px;
-  alignment-baseline: 1px;}
+  }
 .sec2{
  font-family: sans-serif;
 	height: 150px;
-  alignment-baseline: 1px;}
+  }
 .sec3{	
 	 font-family: sans-serif;
 	height: 150px;
-  alignment-baseline: 1px;
+  
 }
