--- a/firstexercise/styles.css
+++ b/firstexercise/styles.css
@@ -2,11 +2,20 @@
 h1
 {
 	color: blue;
+  padding-top: 0px;
+}
+ body {
+background-color: #eaecef  }
+.main1{
+  width:200px; height:50px;
+}
+.heading1{
+  background-color: red;
 }
 .topnav {
     background-color: #333;
     overflow: hidden;
-
+    padding: 0px;
 }
 
 .topnav a {
@@ -28,7 +37,13 @@ h1
     background-color: #4CAF50;
     color: white;
 }
-
+.top-part{
+  padding-top: 90px;
+  font-size: 20px;
+}
+.section-grid{
+margin-top: 7%;
+}
  .hero-container
   { margin-right: -20px; 
   	margin-left: -20px;
@@ -51,6 +66,8 @@ h1
 }
 .foot{
 	text-align: center;
+  background-color: green;
+  
 }
 .left1
 { 
@@ -66,15 +83,22 @@ h1
 
 
 .sec1{
- font-family: sans-serif;
-	height: 150px;
-  }
-.sec2{
- font-family: sans-serif;
-	height: 150px;
-  }
-.sec3{	
-	 font-family: sans-serif;
-	height: 150px;
-  
+  font-family: sans-serif;
+	height: 100px;
+  alignment-baseline: 1px;background-color: #BCE4FA;
+
+
+}
+.sec2{font-family: sans-serif;
+height: 100px;	
+background-color: #BCE4FA;
+}
+.sec3{font-family: sans-serif;	height: 100px;background-color: #BCE4FA;
+
+}
+.middle-part{
+  padding-bottom: 10px;
+}.vid{
+  height: 420px;
+  width: 450px;
 }
