--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,12 @@ h1
 	color: blue;
   padding-top: 0px;
 }
- body {
-background-color: #eaecef  }
-.main1{
+ body
+  {
+background-color: #eaecef 
+  }
+.main1
+{
   width:200px; height:50px;
 }
 .heading1{
@@ -38,16 +41,28 @@ background-color: #eaecef  }
     color: white;
 }
 .top-part{
-  padding-top: 90px;
+  
   font-size: 20px;
+  margin-bottom:90px;
+  
+}
+.top-part1{
+   padding-top: 90px;
 }
 .section-grid{
 margin-top: 7%;
 }
- .hero-container
+.hero-container
   { margin-right: -20px; 
   	margin-left: -20px;
   	 } 
+
+     .inside-section{
+  float: left;
+  color: red;
+    width: 300px;
+    padding-right: 20px;
+      }
 .footer {
   position: relative;
   margin-top: -180px; 
@@ -67,11 +82,32 @@ margin-top: 7%;
 .share-head {
 text-orientation: : left;
 }
+.sensex-section{
+  float:left;
+  
+  font-family: sans-serif;
+  
+
+}
+.sensex-section h3{
+  text-align:center;
+  color: blue;
+}
+.sensex-heading{
+  float: left;
+ 
+}
+.image1{
+  width: 600px;
+}
 
 .foot{
 	text-align: center;
-  background-color: green;
-  
+  background-color:  #808080;
+text-decoration-style: none;
+}
+.foot a{
+  text-decoration: none;
 }
 .left1
 { 
@@ -87,22 +123,42 @@ text-orientation: : left;
 
 
 .sec1{
+  padding-top: 5px;
   font-family: sans-serif;
-	height: 100px;
+	height: 130px;
   alignment-baseline: 1px;background-color: #BCE4FA;
+  padding-top: 10px;
+  padding-bottom: 0px;
 
 
 }
-.sec2{font-family: sans-serif;
-height: 100px;	
+.sec2{
+  font-family: sans-serif;
+height: 140px;	
 background-color: #BCE4FA;
+padding-top: 0px;
+  padding-bottom: 0px;
 }
-.sec3{font-family: sans-serif;	height: 100px;background-color: #BCE4FA;
+.sec3{
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-family: sans-serif;	
+  height: 130px;
+  background-color: #BCE4FA;
+  margin-top: 10px;
 
 }
+
 .middle-part{
+  padding-top: 55px;
   padding-bottom: 10px;
-}.vid{
-  height: 420px;
+}
+.vid{
+  height: 700px;
+  margin-bottom: 30px;
+
+  padding-top: 5px;
+  padding-bottom:0px;
+  height: 445px;
   width: 450px;
 }
