--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ h1
 }
  body
   {
-background-color: #eaecef 
+background-color: #939faf
   }
 .main1
 {
@@ -84,7 +84,7 @@ text-orientation: : left;
 }
 .sensex-section{
   float:left;
-   padding-left: 10px;
+  padding-left: 10px;
   font-family: sans-serif;
   
 
@@ -98,7 +98,9 @@ text-orientation: : left;
  
 }
 .image1{
-  width: 600px;
+  width: 700px;
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 .foot{
@@ -108,6 +110,7 @@ text-decoration-style: none;
 }
 .foot a{
   text-decoration: none;
+  padding-top: 10px;
 }
 .left1
 { 
