--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ h1
 }
  body
   {
-background-color: #eaecef
+background-color: #939faf
   }
 .main1
 {
@@ -66,6 +66,8 @@ margin-top: 7%;
 .footer {
   position: relative;
   margin-top: -180px; 
+  margin-left: 0px;
+  margin-right: 0px;
   height: 180px;
   clear: both;
 }
@@ -97,8 +99,13 @@ text-orientation: : left;
   float: left;
  
 }
+.top-part img
+{
+   width: 300px;
+    height: 200px;
+}
 .image1{
-  width: 700px;
+  width: 500px;
   padding-right: 0px;
   padding-left: 0px;
 }
